--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -80,17 +80,19 @@ item.sapturretmod:turret_upgrade.upg_storage_iii.desc=Increases the available up
 item.sapturretmod:turret_upgrade.ammo_storage.name=Ammunition Storage
 item.sapturretmod:turret_upgrade.ammo_storage.desc=If you're tired of your turrets running out of ammo too fast, this will increases the available ammo storage by 320 rounds.
 item.sapturretmod:turret_upgrade.smart_tgt.name=Smart Targeting
-item.sapturretmod:turret_upgrade.smart_tgt.desc=Essentially, this upgrade makes turrets aware of the targets from others and not targeting those for themselves.\nTurrets within the range of the turret holding this upgrade will be accounted for.
+item.sapturretmod:turret_upgrade.smart_tgt.desc=Upgrades the targeting software of a turret, which will ignore targets that are already targeted by turrets within the range of the turret having this upgrade.
 item.sapturretmod:turret_upgrade.use_decr_i.name=Economy I
-item.sapturretmod:turret_upgrade.use_decr_i.desc=If you think ammo is too expensive to make, then this upgrade will help you out! A turret with this has a chance of 10%% to not consume ammo (so in other words, on average, it uses 10%% less ammo).
+item.sapturretmod:turret_upgrade.use_decr_i.desc=Coats the ammo chamber of a turret with the dust of an emerald, after which the turret has a chance of 10%% to not consume ammo.
 item.sapturretmod:turret_upgrade.use_decr_ii.name=Economy II
-item.sapturretmod:turret_upgrade.use_decr_ii.desc=Like its required upgrade, this lets turrets preserve ammo. This increases the chance of doing so to 35%% .
+item.sapturretmod:turret_upgrade.use_decr_ii.desc=Replaces components of the ammo chamber with gold parts, so the chance of the turret not consuming ammo will be increased to to 35%% .
 item.sapturretmod:turret_upgrade.use_decr_inf.name=Infinitas Oeconomia
-item.sapturretmod:turret_upgrade.use_decr_inf.desc=You want unlimited ammo? This upgrade recreates ammo automatically and infinitely by using the Infinity enchantment of the bow, so you'll never run out of it! There's a catch though: The turret must be filled to the max with rounds, or otherwise it will resort to the other Economy upgrades to reduce ammo usage.
+item.sapturretmod:turret_upgrade.use_decr_inf.desc=Coats the ammo container of a turret with the magic of the Infinity enchantment. The container will then never deplete its supply, but it must be filled to the max with rounds, otherwise it will resort to the other Economy upgrades to reduce ammo usage.
 item.sapturretmod:turret_upgrade.ender_medium.name=Ender Gain Medium
-item.sapturretmod:turret_upgrade.ender_medium.desc=Laser turrets are cool, but since they deal fire based damage, they can't damage anything that is immune to fire. This upgrade replaces the standard redstone based gain medium with an ender pearl based one. The new frequency of the laser fired will inflict damage to anything with fire immunity and also adds bonus damage to everything else.
+item.sapturretmod:turret_upgrade.ender_medium.desc=Replaces the standard redstone based gain medium with an ender pearl based one inside the $1Laser Turret$0. The new frequency of the laser fired will inflict damage to anything with fire immunity and also adds bonus damage to everything else.
 item.sapturretmod:turret_upgrade.fuel_purifier.name=Fuel Purifier
-item.sapturretmod:turret_upgrade.fuel_purifier.desc=This acts as a catalyst to purify the fuel for the Flamethrower Turret. The flames will burn blue and damage anything, even fire-resistent entities, with a higher damage value. Be careful, though! Blocks hit by the flames may catch on fire.
+item.sapturretmod:turret_upgrade.fuel_purifier.desc=Modifies the tank filters to act as a catalyst which purifies the fuel for the $1Flamethrower Turret$0. The flames will burn blue and damage anything, even fire-resistent entities, with a higher damage value. Be careful, though! Blocks hit by the flames may catch on fire.
+item.sapturretmod:turret_upgrade.pers_shield.name=Personal Shield
+item.sapturretmod:turret_upgrade.pers_shield.desc=Attaches a weak forcefield generator to a turret. The shield protects a turret for 20 hitpoints from any attack until its depleted, which will then recover itself slowly. It does not regenerate itself when active.
 
 sapturretmod.turret.i_crossbow.name=Crossbow Turret (T1)
 sapturretmod.turret.i_crossbow.desc=Meant for basic defense and beginners. Not very strong but one of the cheapest to make.
@@ -171,8 +173,8 @@ gui.sapturretmod.tcu.page.upgrades.button.ejectAll=Eject All Upgrades
 gui.sapturretmod.tcu.label.health=Health: %s
 gui.sapturretmod.tcu.label.ammo=Ammo: %s
 gui.sapturretmod.tcu.label.target=Target: %s
-gui.sapturretmod.tcu.label.shield=Shield: %s
-gui.sapturretmod.tcu.label.shield_recv=Shield: Recovering %s
+gui.sapturretmod.tcu.label.shield=Pers. Shield: %s
+gui.sapturretmod.tcu.label.shield_recv=Pers. Shield: Recovering %s
 
 gui.sapturretmod.tassembly.cancel=Cancel
 gui.sapturretmod.tassembly.automate.enable=Automate
