polished TCU GUIs for new style, began work on new target setting GUIs

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -161,26 +161,6 @@ gui.sapturretmod.tinfo.modVersion=Version:
 gui.sapturretmod.tinfo.modAuthor=Author:
 gui.sapturretmod.tinfo.modCredits=Credits:
 
-gui.sapturretmod.tcu.page.info.title=TCU - Turret Info
-gui.sapturretmod.tcu.page.info.tab=Turret Info
-gui.sapturretmod.tcu.page.info.button.dismantle=Dismantle Turret
-gui.sapturretmod.tcu.page.info.button.dismantle.error=You need a chest in your inventory to dismantle!
-gui.sapturretmod.tcu.page.info.button.toggleActive.enable=Activate Turret
-gui.sapturretmod.tcu.page.info.button.toggleActive.disable=Deactivate Turret
-gui.sapturretmod.tcu.page.info.button.range.enable=Show Range
-gui.sapturretmod.tcu.page.info.button.range.disable=Hide Range
-gui.sapturretmod.tcu.page.targetsEntity.title=TCU - Entity Target Settings
-gui.sapturretmod.tcu.page.targetsEntity.tab=Entity Target Settings
-gui.sapturretmod.tcu.page.targetsEntity.button.selectAll=Select All
-gui.sapturretmod.tcu.page.targetsEntity.button.deselectAll=Deselect All
-gui.sapturretmod.tcu.page.targetsEntity.button.selectMobs=Select Monster
-gui.sapturretmod.tcu.page.targetsEntity.button.selectAnimals=Select Animals
-gui.sapturretmod.tcu.page.targetsEntity.button.selectOther=Select Other
-gui.sapturretmod.tcu.page.targetsPlayer.title=TCU - Player Target Settings
-gui.sapturretmod.tcu.page.targetsPlayer.tab=Player Target Settings
-gui.sapturretmod.tcu.page.upgrades.title=TCU - Upgrades
-gui.sapturretmod.tcu.page.upgrades.tab=Upgrades
-gui.sapturretmod.tcu.page.upgrades.button.ejectAll=Eject All Upgrades
 gui.sapturretmod.tcu.label.health=Health: %s
 gui.sapturretmod.tcu.label.ammo=Ammo: %s
 gui.sapturretmod.tcu.label.target=Target: %s
@@ -188,6 +168,23 @@ gui.sapturretmod.tcu.label.shield_pers=Pers. Shield: %s
 gui.sapturretmod.tcu.label.shield_pers_recv=Pers. Shield: Recovering %s
 gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
+gui.sapturretmod.tcu.page.title.info=Turret Info
+gui.sapturretmod.tcu.page.title.targets_creature=Entity Target Settings
+gui.sapturretmod.tcu.page.title.targets_player=Player Target Settings
+gui.sapturretmod.tcu.page.title.targets_smart=Smart Target Settings
+gui.sapturretmod.tcu.page.title.upgrades=Upgrades
+gui.sapturretmod.tcu.button.dismantle=Dismantle Turret
+gui.sapturretmod.tcu.button.toggleActive.enable=Activate Turret
+gui.sapturretmod.tcu.button.toggleActive.disable=Deactivate Turret
+gui.sapturretmod.tcu.button.range.enable=Show Range
+gui.sapturretmod.tcu.button.range.disable=Hide Range
+gui.sapturretmod.tcu.button.selectAll=Select All
+gui.sapturretmod.tcu.button.deselectAll=Deselect All
+gui.sapturretmod.tcu.button.selectMobs=Select Monster
+gui.sapturretmod.tcu.button.selectAnimals=Select Animals
+gui.sapturretmod.tcu.button.selectOther=Select Other
+gui.sapturretmod.tcu.button.ejectAll=Eject All Upgrades
+gui.sapturretmod.tcu.page.dismantle.error=You need a chest in your inventory to dismantle!
 
 gui.sapturretmod.tassembly.cancel=Cancel
 gui.sapturretmod.tassembly.automate.enable=Automate
