backported changes from master branch, from commit 06668bae2277ed9b5d13c17181088de1d9c2b891 to commit fbc7ecefa4bdc8fabfc67b8cb2c71866e689916d

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -80,7 +80,7 @@ item.sapturretmod:turret_upgrade.upg_storage_iii.desc=Adds 9 more upgrade slots 
 item.sapturretmod:turret_upgrade.ammo_storage.name=Ammunition Storage
 item.sapturretmod:turret_upgrade.ammo_storage.desc=Increases ammo storage by 100%% .\n\nDuplicates the ammo container inside the turret for more ammunition storage.
 item.sapturretmod:turret_upgrade.smart_tgt.name=Smart Targeting
-item.sapturretmod:turret_upgrade.smart_tgt.desc=Adds a targeting co-processor for smarter target selection.\n\nThe co-processor filters out targets that are already targeted by other turrets within the range of the turret having this upgrade.
+item.sapturretmod:turret_upgrade.smart_tgt.desc=Adds a targeting co-processor for smarter target selection. This unlocks a new tab in the TCU that gives you finer targeting control.\n\nThe target list supersedes these settings, meaning if it's set to target tamed creatures, it still won't shoot at tamed wolves if wolves are not set as a target.\n\nBy default, the co-processor is configured to ignore entities targeted by turrets of the same type. The TCU allows further customization:\n\n§3Turret Awareness§0\nChecks surrounding turrets and only allows entities that are not targeted, if enabled.\n\n§3Tamed Awareness§0\nChecks tamed entities and, if configured, their owners.\n\n§3Age Awareness§0\nChecks the age of a targeted entity and only allows either children or adults, if enabled.\n\n§3Count Awareness§0\nCounts targetable entities and compares either the sum of all types (global) or each sum of each type (individual; e.g. sum of cows and sum of pigs). Allows only targeting if the amount is / amounts are above or below the specified value. The value can be between 0 and 256 (inclusive).
 item.sapturretmod:turret_upgrade.use_decr_i.name=Economy I
 item.sapturretmod:turret_upgrade.use_decr_i.desc=Reduces ammo consumption by an average of 10%% .\n\nCoats the ammo container of a turret with the dust of an emerald, after which the turret has a chance to not consume ammo.
 item.sapturretmod:turret_upgrade.use_decr_ii.name=Economy II
@@ -161,26 +161,6 @@ gui.sapturretmod.tinfo.modVersion=Version:
 gui.sapturretmod.tinfo.modAuthor=Author:
 gui.sapturretmod.tinfo.modCredits=Credits:
 
-gui.sapturretmod.tcu.page.info.title=TCU - Turret Info
-gui.sapturretmod.tcu.page.info.tab=Turret Info
-gui.sapturretmod.tcu.page.info.button.dismantle=Dismantle Turret
-gui.sapturretmod.tcu.page.info.button.dismantle.error=You need a chest in your inventory to dismantle!
-gui.sapturretmod.tcu.page.info.button.toggleActive.enable=Activate Turret
-gui.sapturretmod.tcu.page.info.button.toggleActive.disable=Deactivate Turret
-gui.sapturretmod.tcu.page.info.button.range.enable=Show Range
-gui.sapturretmod.tcu.page.info.button.range.disable=Hide Range
-gui.sapturretmod.tcu.page.targetsEntity.title=TCU - Entity Target Settings
-gui.sapturretmod.tcu.page.targetsEntity.tab=Entity Target Settings
-gui.sapturretmod.tcu.page.targetsEntity.button.selectAll=Select All
-gui.sapturretmod.tcu.page.targetsEntity.button.deselectAll=Deselect All
-gui.sapturretmod.tcu.page.targetsEntity.button.selectMobs=Select Monster
-gui.sapturretmod.tcu.page.targetsEntity.button.selectAnimals=Select Animals
-gui.sapturretmod.tcu.page.targetsEntity.button.selectOther=Select Other
-gui.sapturretmod.tcu.page.targetsPlayer.title=TCU - Player Target Settings
-gui.sapturretmod.tcu.page.targetsPlayer.tab=Player Target Settings
-gui.sapturretmod.tcu.page.upgrades.title=TCU - Upgrades
-gui.sapturretmod.tcu.page.upgrades.tab=Upgrades
-gui.sapturretmod.tcu.page.upgrades.button.ejectAll=Eject All Upgrades
 gui.sapturretmod.tcu.label.health=Health: %s
 gui.sapturretmod.tcu.label.ammo=Ammo: %s
 gui.sapturretmod.tcu.label.target=Target: %s
@@ -188,6 +168,43 @@ gui.sapturretmod.tcu.label.shield_pers=Pers. Shield: %s
 gui.sapturretmod.tcu.label.shield_pers_recv=Pers. Shield: Recovering %s
 gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
+gui.sapturretmod.tcu.page.title.info=Turret Info
+gui.sapturretmod.tcu.page.title.targets_creature=Entity Target Settings
+gui.sapturretmod.tcu.page.title.targets_player=Player Target Settings
+gui.sapturretmod.tcu.page.title.targets_smart=Smart Target Settings
+gui.sapturretmod.tcu.page.title.upgrades=Upgrades
+gui.sapturretmod.tcu.button.dismantle=Dismantle Turret
+gui.sapturretmod.tcu.button.activate=Activate Turret
+gui.sapturretmod.tcu.button.deactivate=Deactivate Turret
+gui.sapturretmod.tcu.button.show_range=Show Range
+gui.sapturretmod.tcu.button.hide_range=Hide Range
+gui.sapturretmod.tcu.button.select_all=Select All
+gui.sapturretmod.tcu.button.deselect_all=Deselect All
+gui.sapturretmod.tcu.button.select_mobs=Select Monster
+gui.sapturretmod.tcu.button.select_animals=Select Animals
+gui.sapturretmod.tcu.button.select_other=Select Other
+gui.sapturretmod.tcu.button.whitelist=Whitelist Mode
+gui.sapturretmod.tcu.button.blacklist=Blacklist Mode
+gui.sapturretmod.tcu.button.eject_all=Eject All Upgrades
+gui.sapturretmod.tcu.button.adv_turret_ignore=Ignore other turrets
+gui.sapturretmod.tcu.button.adv_turret_same=Ignore entities targeted\nby turrets of the same type
+gui.sapturretmod.tcu.button.adv_turret_all=Ignore entities targeted\nby turrets of all types
+gui.sapturretmod.tcu.button.adv_tamed_all=Target all tamed creatures
+gui.sapturretmod.tcu.button.adv_tamed_players=Only target tamed creatures\nfrom targeted players
+gui.sapturretmod.tcu.button.adv_tamed_none=Don't target tamed creatures
+gui.sapturretmod.tcu.button.adv_child_adult=Target children and adults
+gui.sapturretmod.tcu.button.adv_child_only=Target only children
+gui.sapturretmod.tcu.button.adv_adult_only=Target only adults
+gui.sapturretmod.tcu.button.adv_count_no=Ignore entity count
+gui.sapturretmod.tcu.button.adv_count_global_less=Don't target anything if global\nentity amount is less than...
+gui.sapturretmod.tcu.button.adv_count_global_more=Don't target anything if global\nentity amount is greater than...
+gui.sapturretmod.tcu.button.adv_count_individual_less=Don't target entities of the\nsame type if amount of\nthat type is less than...
+gui.sapturretmod.tcu.button.adv_count_individual_more=Don't target entities of the\nsame type if amount of\nthat type is greater than...
+gui.sapturretmod.tcu.page.info.dismantle.error=You need a chest in your inventory to dismantle!
+gui.sapturretmod.tcu.page.smarttgt.turret=Turret Awareness
+gui.sapturretmod.tcu.page.smarttgt.tamed=Tamed Awareness
+gui.sapturretmod.tcu.page.smarttgt.age=Age Awareness
+gui.sapturretmod.tcu.page.smarttgt.count=Count Awareness
 
 gui.sapturretmod.tassembly.cancel=Cancel
 gui.sapturretmod.tassembly.automate.enable=Automate
