--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -118,28 +118,50 @@ item.sapturretmod:turret_upgrade.shield_strength_ii.desc=Increases the radius of
 # Turrets
 sapturretmod.turret.name=Defense Turret
 sapturretmod.turret.i_crossbow.name=Crossbow Turret (T1)
-sapturretmod.turret.i_crossbow.desc=Meant for basic defense and beginners. Not very strong but one of the cheapest to make.
 sapturretmod.turret.i_shotgun.name=Shotgun Turret (T1)
-sapturretmod.turret.i_shotgun.desc=Used for basic crowd control. Very weak but can hit multiple targets at once, due to its ammo dispersing into multiple projectiles.
 sapturretmod.turret.i_snowball.name=Cryolator Turret (T1)
-sapturretmod.turret.i_snowball.desc=This one is of the supporting kind, as its not dealing any damage, but will slow down any target that it hits.\n\nIt'll only attack a target if it's not already slowed down, though, to not waste ammo.
 sapturretmod.turret.ii_revolver.name=Revolver Turret (T2)
-sapturretmod.turret.ii_revolver.desc=Can be seen as the upgraded version of the Crossbow Turret, as it has more range, greater health and deals more damage, although with less knockback effect.
 sapturretmod.turret.ii_minigun.name=Minigun Turret (T2)
-sapturretmod.turret.ii_minigun.desc=Deals low amounts of damage per projectile, but compensates for it with a rapid firing rate.\n\nDue to its high output, and since its shooting compartments aren't directly inside the head, it can store double the amount of rounds (512).
 sapturretmod.turret.ii_shieldgen.name=Forcefield Turret (T2)
-sapturretmod.turret.ii_shieldgen.desc=This supportive turret creates a forcefield around it that protects the area from any intruders.\n\nTargets within the forcefield will immediately be pushed out, but make sure they don't get stuck, because the shield will quickly drain out in an attempt to get the entity out.
 sapturretmod.turret.iii_laser.name=Laser Turret (T3)
-sapturretmod.turret.iii_laser.desc=Going with the theme, this can be considered as the upgraded version of the Crossbow and Revolver Turret. With more health, higher damage and firing rate, this can burn anything alive.\n\nIf the target is immune to fire, the turret can't damage it, so be careful to not let it waste ammo on nether creatures (or upgrade it).
 sapturretmod.turret.iii_flamethrower.name=Flamethrower Turret (T3)
-sapturretmod.turret.iii_flamethrower.desc=This turret deals large amounts of damage on a rather short distance. Not only that, but it operates in an area of effect, meaning it can hit multiple targets in front of it.\n\nOh yeah, it deals fire damage if it wasn't obvious, thus it can't damage anything with fire-resistance if not upgraded.
 
 #### GUI ####
 # Turret Info
-sanlib.lexicon.sapturretmod.turret.values.health=Health: %.0f HP
-sanlib.lexicon.sapturretmod.turret.values.range=Range: %s
-sanlib.lexicon.sapturretmod.turret.values.ammo=Ammo Capacity: %d
 sanlib.lexicon.sapturretmod.assembly=Turret Assembly Recipe
+sanlib.lexicon.sapturretmod.turret.name=Turrets
+sanlib.lexicon.sapturretmod.turret.values.health=Health
+sanlib.lexicon.sapturretmod.turret.values.ammo=Ammo Capacity
+sanlib.lexicon.sapturretmod.turret.values.range=Range
+sanlib.lexicon.sapturretmod.turret.values.reload=Reload Time
+sanlib.lexicon.sapturretmod.turret.values.tier=Tier
+sanlib.lexicon.sapturretmod.turret.desc=Description
+sanlib.lexicon.sapturretmod.turret.ammo=Applicable Ammunitions
+sanlib.lexicon.sapturretmod.turret.i_crossbow.text=Meant for basic defense and beginners. Not very strong but one of the cheapest to make.
+sanlib.lexicon.sapturretmod.turret.i_shotgun.text=Used for basic crowd control. Very weak but can hit multiple targets at once, due to its ammo dispersing into multiple projectiles.
+sanlib.lexicon.sapturretmod.turret.i_snowball.text=This one is of the supporting kind, as its not dealing any damage, but will slow down any target that it hits.\n\nIt'll only attack a target if it's not already slowed down, though, to preserve ammo.
+sanlib.lexicon.sapturretmod.turret.ii_revolver.text=Can be seen as the upgraded version of the {link:Crossbow Turret|turret:i_crossbow}, as it has more range, greater health and deals more damage, although with less knockback effect.
+sanlib.lexicon.sapturretmod.turret.ii_minigun.text=Deals low amounts of damage per projectile, but compensates for it with a rapid firing rate.\n\nDue to its high output, and since its shooting compartments aren't directly inside the head, it can store double the amount of rounds (512).
+sanlib.lexicon.sapturretmod.turret.ii_shieldgen.text=This supportive turret creates a forcefield around it that protects the area from any intruders.\n\nTargets within the forcefield will immediately be pushed out, but make sure they don't get stuck, because the shield will quickly drain out in an attempt to get the entity out.
+sanlib.lexicon.sapturretmod.turret.iii_laser.text=Going with the theme, this can be considered as the upgraded version of the {link:Crossbow|turret:i_crossbow} and {link:Revolver Turret|turret:ii_revolver}. With more health, higher damage and firing rate, this can burn anything alive.\n\nIf the target is immune to fire, though, the turret can't damage it, so make sure to configure appropriate targets (or upgrade it).
+sanlib.lexicon.sapturretmod.turret.iii_flamethrower.text=This turret deals large amounts of damage on a rather short distance. Not only that, but it operates in an area of effect like the {link:Shotgun Turret|turret:i_shotgun}, meaning it can hit multiple targets in front of it.\n\nOh yeah, it deals fire damage if it wasn't obvious, thus it can't damage anything with fire-resistance if not upgraded.
+sanlib.lexicon.sapturretmod.ammo.name=Ammunition Types
+sanlib.lexicon.sapturretmod.ammo.arrow.name=Arrow Bolt
+sanlib.lexicon.sapturretmod.ammo.arrow.text=Used by the Crossbow Turret. Projectiles have a tiny knockback effect and act like standard arrows, just smaller. Very precise.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.shotgun_shell.name=Shotgun Shell
+sanlib.lexicon.sapturretmod.ammo.shotgun_shell.text=Used by the Shotgun Turret. One shell turns into 6 dispersed pebble projectiles when shot, which have no knockback effect.\nDoes not cause any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.cryocell.name=Cryo Cell
+sanlib.lexicon.sapturretmod.ammo.cryocell.text=Used by the Cryolator Turret. This ammunition comes in 3 versions, which applies different slowness effects:\nCell SG1: Slowness I for 15s\nCell SG2: Slowness III for 10s\nCell SG3: Slowness V for 5s.\n\nDoes not cause immunity and any damage to the target.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.bullet.name=Revolver Bullets
+sanlib.lexicon.sapturretmod.ammo.bullet.text=Used by the Revolver Turret, it has the same knockback effect like the Shotgun projectiles, but do more damage than the Arrow bolts from the Crossbow Turret. Unlike other ammo types, this provides double the rounds.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.minigun_shell.name=Minigun Rounds
+sanlib.lexicon.sapturretmod.ammo.minigun_shell.text=Used by the Minigun Turret. Cartridges contain seeds which do little damage and no knockback, but like the shotgun pebbles, they do not cause any immunity to the target. This, in combination with the rapid firing rate of the turret, compensate for their weakness.\nDue to the rapid firing rate, a cartridge provides 4 shots instead of the usual 1.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.eleccell.name=Electrolyte Cell
+sanlib.lexicon.sapturretmod.ammo.eleccell.text=Used by the Forcefield Turret. Provides energy necessary to charge up the forcefield.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.fluxcell.name=Flux Cell
+sanlib.lexicon.sapturretmod.ammo.fluxcell.text=Used by the Laser Turret. Lasers have no knockback effect and don't damage anything immune to fire (unless upgraded), but deal quite a decent amount of damage and also sets the target on fire for 5 seconds.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.ammo.fueltank.name=Fuel Tank
+sanlib.lexicon.sapturretmod.ammo.fueltank.text=Used by the Flamethrower Turret. Flames have, like lasers, no knockback effect and are ineffective against fire-resistant targets (unless upgraded). They deal a hefty amount of damage and sets targets on fire for 5 seconds.\nLike the minigun cartridges, a tank provides 16 shots, due to the rapid firing rate of the turret.\n\nCan be packaged, whose items will provide 16x ammo.
 sanlib.lexicon.sapturretmod.info.name=About
 sanlib.lexicon.sapturretmod.info.version=Version
 sanlib.lexicon.sapturretmod.info.author=Author
@@ -152,22 +174,6 @@ sanlib.lexicon.sapturretmod.search.name=Search
 sanlib.lexicon.sapturretmod.search.title=Results matching with title
 sanlib.lexicon.sapturretmod.search.text=Results matching with entry text
 
-gui.sapturretmod.tinfo.ammo.arrow.name=Arrow Bolt
-gui.sapturretmod.tinfo.ammo.arrow.desc=Used by the Crossbow Turret. Projectiles have a tiny knockback effect and act like standard arrows, just smaller. Very precise.\n\nCan be packaged, whose items will provide 16x ammo.
-gui.sapturretmod.tinfo.ammo.shotgun_shell.name=Shotgun Shell
-gui.sapturretmod.tinfo.ammo.shotgun_shell.desc=Used by the Shotgun Turret. One shell turns into 6 dispersed pebble projectiles when shot, which have no knockback effect.\nDoes not cause any immunity to the target, thus targets hit by multiple pebbles will take damage from all of them.\n\nCan be packaged, whose items will provide 16x ammo.
-gui.sapturretmod.tinfo.ammo.cryocell.name=Cryo Cell
-gui.sapturretmod.tinfo.ammo.cryocell.desc=Used by the Cryolator Turret. This ammunition comes in 3 versions, which applies different slowness effects:\nCell SG1: Slowness I for 15s\nCell SG2: Slowness III for 10s\nCell SG3: Slowness V for 5s.\n\nDoes not cause immunity and any damage to the target.\n\nCan be packaged, whose items will provide 16x ammo.
-gui.sapturretmod.tinfo.ammo.bullet.name=Revolver Bullets
-gui.sapturretmod.tinfo.ammo.bullet.desc=Used by the Revolver Turret, it has the same knockback effect like the Shotgun projectiles, but do more damage than the Arrow bolts from the Crossbow Turret. Unlike other ammo types, this provides double the rounds.\n\nCan be packaged, whose items will provide 16x ammo.
-gui.sapturretmod.tinfo.ammo.minigun_shell.name=Minigun Rounds
-gui.sapturretmod.tinfo.ammo.minigun_shell.desc=Used by the Minigun Turret. Cartridges contain seeds which do little damage and no knockback, but like the shotgun pebbles, they do not cause any immunity to the target. This, in combination with the rapid firing rate of the turret, compensate for their weakness.\nDue to the rapid firing rate, a cartridge provides 4 shots instead of the usual 1.\n\nCan be packaged, whose items will provide 16x ammo.
-gui.sapturretmod.tinfo.ammo.eleccell.name=Electrolyte Cell
-gui.sapturretmod.tinfo.ammo.eleccell.desc=Used by the Forcefield Turret. Provides energy necessary to charge up the forcefield.\n\nCan be packaged, whose items will provide 16x ammo.
-gui.sapturretmod.tinfo.ammo.fluxcell.name=Flux Cell
-gui.sapturretmod.tinfo.ammo.fluxcell.desc=Used by the Laser Turret. Lasers have no knockback effect and don't damage anything immune to fire (unless upgraded), but deal quite a decent amount of damage and also sets the target on fire for 5 seconds.\n\nCan be packaged, whose items will provide 16x ammo.
-gui.sapturretmod.tinfo.ammo.fueltank.name=Fuel Tank
-gui.sapturretmod.tinfo.ammo.fueltank.desc=Used by the Flamethrower Turret. Flames have, like lasers, no knockback effect and are ineffective against fire-resistant targets (unless upgraded). They deal a hefty amount of damage and sets targets on fire for 5 seconds.\nLike the minigun cartridges, a tank provides 16 shots, due to the rapid firing rate of the turret.\n\nCan be packaged, whose items will provide 16x ammo.
 gui.sapturretmod.tinfo.infoTitle=Info about this mod
 gui.sapturretmod.tinfo.category.turrets.name=Turrets
 gui.sapturretmod.tinfo.category.ammo.name=Ammunition
