* finished ammo lexicon pages  * begun upgrade lexicon pages  * ammunitions now have groups that determine the type of turret they can be used in and their icon and name for the lexicon, instead of having it in the ammo class itself  * turret upgrades now provide a list of applicable turrets (or none if applicable to anything) and a tier range, both replace ITurretUpgrade#isTurretApplicable(...)  * added applicable ammo types to turret lexicon pages  * code cleanup

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -129,13 +129,16 @@ sapturretmod.turret.iii_flamethrower.name=Flamethrower Turret (T3)
 #### GUI ####
 # Turret Info
 sanlib.lexicon.sapturretmod.assembly=Turret Assembly Recipe
+sanlib.lexicon.sapturretmod.desc=Description
+sanlib.lexicon.sapturretmod.details=Details
+sanlib.lexicon.sapturretmod.stat.health=Health
+sanlib.lexicon.sapturretmod.stat.ammo=Ammo Capacity
+sanlib.lexicon.sapturretmod.stat.range=Range
+sanlib.lexicon.sapturretmod.stat.reload=Reload Time
+sanlib.lexicon.sapturretmod.stat.tier=Tier
+sanlib.lexicon.sapturretmod.stat.rounds=Rounds provided
+sanlib.lexicon.sapturretmod.stat.damage=Damage per projectile
 sanlib.lexicon.sapturretmod.turret.name=Turrets
-sanlib.lexicon.sapturretmod.turret.values.health=Health
-sanlib.lexicon.sapturretmod.turret.values.ammo=Ammo Capacity
-sanlib.lexicon.sapturretmod.turret.values.range=Range
-sanlib.lexicon.sapturretmod.turret.values.reload=Reload Time
-sanlib.lexicon.sapturretmod.turret.values.tier=Tier
-sanlib.lexicon.sapturretmod.turret.desc=Description
 sanlib.lexicon.sapturretmod.turret.ammo=Applicable Ammunitions
 sanlib.lexicon.sapturretmod.turret.i_crossbow.text=Meant for basic defense and beginners. Not very strong but one of the cheapest to make.
 sanlib.lexicon.sapturretmod.turret.i_shotgun.text=Used for basic crowd control. Very weak but can hit multiple targets at once, due to its ammo dispersing into multiple projectiles.
@@ -146,6 +149,7 @@ sanlib.lexicon.sapturretmod.turret.ii_shieldgen.text=This supportive turret crea
 sanlib.lexicon.sapturretmod.turret.iii_laser.text=Going with the theme, this can be considered as the upgraded version of the {link:Crossbow|turret:i_crossbow} and {link:Revolver Turret|turret:ii_revolver}. With more health, higher damage and firing rate, this can burn anything alive.\n\nIf the target is immune to fire, though, the turret can't damage it, so make sure to configure appropriate targets (or upgrade it).
 sanlib.lexicon.sapturretmod.turret.iii_flamethrower.text=This turret deals large amounts of damage on a rather short distance. Not only that, but it operates in an area of effect like the {link:Shotgun Turret|turret:i_shotgun}, meaning it can hit multiple targets in front of it.\n\nOh yeah, it deals fire damage if it wasn't obvious, thus it can't damage anything with fire-resistance if not upgraded.
 sanlib.lexicon.sapturretmod.ammo.name=Ammunition Types
+sanlib.lexicon.sapturretmod.ammo.turret=Applicable Turret
 sanlib.lexicon.sapturretmod.ammo.arrow.name=Arrow Bolt
 sanlib.lexicon.sapturretmod.ammo.arrow.text=Used by the Crossbow Turret. Projectiles have a tiny knockback effect and act like standard arrows, just smaller. Very precise.\n\nCan be packaged, whose items will provide 16x ammo.
 sanlib.lexicon.sapturretmod.ammo.shotgun_shell.name=Shotgun Shell
@@ -162,6 +166,7 @@ sanlib.lexicon.sapturretmod.ammo.fluxcell.name=Flux Cell
 sanlib.lexicon.sapturretmod.ammo.fluxcell.text=Used by the Laser Turret. Lasers have no knockback effect and don't damage anything immune to fire (unless upgraded), but deal quite a decent amount of damage and also sets the target on fire for 5 seconds.\n\nCan be packaged, whose items will provide 16x ammo.
 sanlib.lexicon.sapturretmod.ammo.fueltank.name=Fuel Tank
 sanlib.lexicon.sapturretmod.ammo.fueltank.text=Used by the Flamethrower Turret. Flames have, like lasers, no knockback effect and are ineffective against fire-resistant targets (unless upgraded). They deal a hefty amount of damage and sets targets on fire for 5 seconds.\nLike the minigun cartridges, a tank provides 16 shots, due to the rapid firing rate of the turret.\n\nCan be packaged, whose items will provide 16x ammo.
+sanlib.lexicon.sapturretmod.upgrade
 sanlib.lexicon.sapturretmod.info.name=About
 sanlib.lexicon.sapturretmod.info.version=Version
 sanlib.lexicon.sapturretmod.info.author=Author
