some cosmetic adjustments to the upgrade lexicon pages

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -146,7 +146,7 @@ sanlib.lexicon.sapturretmod.ammo.fueltank.name=Fuel Tank
 sanlib.lexicon.sapturretmod.ammo.fueltank.text=Used by the Flamethrower Turret. Flames have, like lasers, no knockback effect and are ineffective against fire-resistant targets (unless upgraded). They deal a hefty amount of damage and sets targets on fire for 5 seconds.\nLike the minigun cartridges, a tank provides 16 shots, due to the rapid firing rate of the turret.\n\nCan be packaged, whose items will provide 16x ammo.
 sanlib.lexicon.sapturretmod.upgrade.name=Upgrades
 sanlib.lexicon.sapturretmod.upgrade.turrets=Applicable Turrets
-sanlib.lexicon.sapturretmod.upgrade.prereq=Required Upgrade to be installed
+sanlib.lexicon.sapturretmod.upgrade.prereq=Required Upgrade
 sanlib.lexicon.sapturretmod.upgrade.empty.text=This is the crafting base for all other upgrades. Not applicable to anything.
 sanlib.lexicon.sapturretmod.upgrade.health_i.text=Increases the maximum turret health by 25%% .\n\nThis upgrade strengthens the structure of the turret chassis.\nIt will not increase the turrets health automatically! You must heal it afterwards.
 sanlib.lexicon.sapturretmod.upgrade.health_ii.text=Increases the maximum turret health by an additional 25%% (50%% in total).\n\nThis upgrade further strengthens the structure of the turret chassis.\nIt will not increase the turrets health automatically! You must heal it afterwards.
